fix: fixed comment